# vellcro

./: .gitignore  flake.nix
rust/: Cargo.toml
rust/src/: config.rs  main.rs  remote.rs  utils.rs
rust/src/collection/: mod.rs
rust/src/discid/: mod.rs
rust/src/manifest/: keys.rs  mod.rs
