[package]
name = "vellcro"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lava_torrent = "0.9"
sha1 = "0.10"
metaflac = "0.2"
globset = "0.4"
regex = "1.10"
dirs = "5.0"
dotenvy = "0.15"
base64 = "0.22"
alphanumeric-sort = "1.5"
anyhow = "1.0"
toml = "1.1.2"
chrono = "0.4.44"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
image = "0.25.10"
